--- a/P4Ppages/P4P10.html
+++ b/P4Ppages/P4P10.html
@@ -24,18 +24,18 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Heikki.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Marikki.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Heikki Lintula</h2>
-                <h2>Golf Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Marikki Viljasaari</h2>
+                <h2>Tequila Division</h2>
+                <p>20-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -52,27 +52,26 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Vahvuudet</h3>
+                <p>Tequila</p>
+                <p>Kokemusta paineen alla toimimisesta Pariisin muotiviikolta</p>
+                <p></p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Heikkoudet</h3>
+                <p>"Downataaks nää?"</p>
+                <p>Chianti</p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <p>Ei riisinkeitintä keittiön tasolla (heikkous)</p>
+                <p>Uuden asunnon sisutuksesta 100% pättäetty (-Rune kone ja ilmastointilaite)</p>
+                <p> Ehti asua uudessa asunnossa noin 5 tuntia ennen taloyhtiön sisäpiharemonttia</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>Liigan johtavia puolustustehokkuus Torstai Kallesta</p>
+                <p>Liigan huonoin puolustustehokkuus Hyvinkään Rillosta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
@@ -82,8 +81,8 @@
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Ei aiempaa näyttöä</p>
+                <p>IDSC odotukset korkealla</p>
             </div>
         </div>
     </section>
