--- a/P4Ppages/P4P11.html
+++ b/P4Ppages/P4P11.html
@@ -23,18 +23,18 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Eltsu.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Ilari.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Elias Leikkonen</h2>
-                <h2>Golf Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Ilari Huotari</h2>
+                <h2>Banker Division</h2>
+                <p>22-3-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -51,38 +51,37 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Vahvuudet</h3>
+                <p>Rekkamiehen setin keksijä</p>
+                <p>Jalkapalloilijoille ominainen vikkelyys</p>
+                <p>Undisputed Beer Pong Champ</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Heikkoudet</h3>
+                <p>Aikatauluissa pysyminen</p>
+                <p>Asunnon etäisyys keskustasta</p>
+                <p></p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <p>20h viikossa beer pong pöytä pystyssä larun kämpässä</p>
+                <p>odotusarvo 0 taloyhtiön saunavuoroa seuraavan vuoden aikana</p>   
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>Puolustus mökillä nukkuessa heikko heikkoa</p>
+                <p>Puolustut jalakpallokentällä huomattavasti parempitasoista</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <p>Nordean arvoa nostettu 2%</p>
+                <p>0 etätyöpäivää</p>
+                <p></p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Ei aiempaan näyttöä</p>
+                <p>Dokathlonin "Underdog"</p>
             </div>
         </div>
     </section>
