--- a/P4Ppages/P4P12.html
+++ b/P4Ppages/P4P12.html
@@ -24,18 +24,18 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Heikki.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Asse.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Heikki Lintula</h2>
-                <h2>Golf Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Asse Immonen</h2>
+                <h2>Sleep Division</h2>
+                <p>25-8-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -52,38 +52,37 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Vahvuudet</h3>
+                <p>Kilpikonnapuolustus</p>
+                <p>Golf swingin kauneus</p>
+                <p></p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Heikkoudet</h3>
+                <p>Sammuttuaan ei herää kirveelläkään</p>
+                <p>Urheilusuorituksen taso laskee 50% jos City of Roses ei soi samalla</p>
+                <p></p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <p>Lauttasaaren asunnon pinta-alasta 40% saunaa</p>
+                <p>3kg riisiä keitetty viikon aikana</p>
+                <p>50% asunnon sähkölaskusta mennyt RuneScapen pelaamiseen</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>100% kilpikonnapuolustus</p>
+                <p>80% puolustustehokkuus Torstai Kallesta</p>
             </div>
             <div class="stat">
-                <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <h3>Karsintojen tulokset</h3>
+                <p>Top 1 Pumppikuva kaikista kilpailijoista</p>
+                <p>Voitti myös karsintojen sammumiskilpailun</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Ei sijoittunut vuoden 2022 kisoissa top3</p>
+                <p>odotettu prosenttimäärä lajeista humalassa 100%</p>
             </div>
         </div>
     </section>
