--- a/P4Ppages/P4P16.html
+++ b/P4Ppages/P4P16.html
@@ -24,18 +24,18 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Heikki.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Jiri.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Heikki Lintula</h2>
-                <h2>Golf Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Jiri Aro</h2>
+                <h2>Banker Division</h2>
+                <p>11-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -52,38 +52,37 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Vahvuudet</h3>
+                <p>Excel-taidot</p>
+                <p>Aallon Academic Weapon</p>
+                <p>Lempäälän keulakuva</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Heikkoudet</h3>
+                <p>Saattaa saada kutsun takaisin dansken toimistolle kesken kilpailun vaikkei ole enää töissä siellä</p>
+                <p>Rehellinen bulkkiolut</p>
             </div>
             <div class="stat">
-                <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <h3>Kesän tilastot</h3>
+                <p>Lempäälän kunnan arvoa nostettu 100%</p>
+                <p>1 lenkki suoritettu</p>
+                <p></p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>Keväällä puolustus korkealla, kesällä olematon</p>
+                <p>50% puolustustehokkuus Torstai Kallesta</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <p>12,5h keskiverto työpäivä keväällä</p>
+                <p>0h keskiarvo työpäivä kesällä</p>
+                <p>Ultimaattinen shareholder valuen kasvattaja</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Ei aiempaa kokemusta lajeista</p>
+                <p>IDSC tulee suorittamaan dopingtestin ennen kilpailuja kyseiselle kilpailijalle</p>
             </div>
         </div>
     </section>
