--- a/P4Ppages/P4P2.html
+++ b/P4Ppages/P4P2.html
@@ -27,8 +27,8 @@
             <img src="../Kuvat/Veikko.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
                 <h2>Veikko Talvitie</h2>
-                <h2>Asfalttityö Divisioona</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Nightlife Divisioona</h2>
+                <p>28-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
                         <h3>1</h3>
