--- a/P4Ppages/P4P3.html
+++ b/P4Ppages/P4P3.html
@@ -24,14 +24,14 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Sebbe.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Max.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Sebastian Engström</h2>
-                <h2>Sangria Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Max Kuula</h2>
+                <h2>Audi Division</h2>
+                <p>18-0-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
@@ -52,37 +52,37 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
-            </div>
-            <div class="stat">
-                <h3>Bilis statsit</h3>
-                <p>Keppi maksaa bilispöydän verran</p>
-                <p></p>
+                <h3>Juontitilastot</h3>
+                <p>3 olutta viikonlopussa</p>
+                <p>Coca-Cola Zeroja tyhjennetty 240 viikonlopun aikana</p>
                 <p></p>
             </div>
             <div class="stat">
-                <h3>Kämppä statsit</h3>
-                <p>5 uutta remonttia viikossa</p>
-                <p>Aitaa korotettu taloyhtiön sääntöjä vastaan kahdesti</p>
-                <p>40 grillin kaasupulloa tyhjennetty kuukaudessa</p>
+                <h3>Heikkoudet</h3>
+                <p>Coca-Cola Zero</p>
+                <p>Varma ajonakki aina</p>
+                <p></p>
+            </div>
+            <div class="stat">
+                <h3>LUT tilastot</h3>
+                <p>0 opiskelijatapahtumaa</p>
+                <p>Haalarit vielä hakematta</p>
+                <p>Vuoden aikana 24h vietetty Lappeenrannassa</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>7% puolustustehokkuus viinikaapeista</p>
+                <p>Potkunyrkkeily on paras puolustus</p>
+                <p>Asunnon etäisyys yöelämstä takaa kivenkovan puolustuksen</p>
             </div>
             <div class="stat">
-                <h3>Työtilastot</h3>
-                <p>40 000 uutta asiakasta päivässä</p>
-                <p>50% viikosta viikonlopun kuittien vähentämiseen</p>
-                <p>20 uutta nakkikonetta palkattu kuukaudessa</p>
+                <h3>Audimiehen tilastot</h3>
+                <p>TT kapasiteetti 4 henkilöä (yksi takakontissa)</p>
+                <p>0-100 km/h 2,5s</p>
+                <p>Krokettimailan kestävä katto</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>Heittää minkä tahansa esineen 100m päähän olut toisessa kädessä</p>
+                <p>Kiinnostus kilpailua kohtaan ailahteleva</p>
                 <p></p>
             </div>
         </div>
