--- a/P4Ppages/P4P7.html
+++ b/P4Ppages/P4P7.html
@@ -27,7 +27,7 @@
             <img src="../Kuvat/risto.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
                 <h2>Risto Hartikainen</h2>
-                <h2></h2>
+                <h2>Lightweight Division</h2>
                 <p>25-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
