--- a/P4Ppages/P4P8.html
+++ b/P4Ppages/P4P8.html
@@ -27,7 +27,7 @@
             <img src="../Kuvat/Joni.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
                 <h2>Joni Pihlman</h2>
-                <h2></h2>
+                <h2>AfterSki Division</h2>
                 <p>25-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
