--- a/P4Ppages/P4P9.html
+++ b/P4Ppages/P4P9.html
@@ -27,8 +27,8 @@
             <img src="../Kuvat/Eltsu.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
                 <h2>Elias Leikkonen</h2>
-                <h2>Golf Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Nightlife Division</h2>
+                <p>21-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
                         <h3>0</h3>
@@ -52,10 +52,10 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Koulutilastot</h3>
+                <p>Aloitti maisteriopinnot ennen kannettavan tietokoneen kehitystä</p>
+                <p>Gradu jo ajatuksen tasolla valmis (mietti asiaa kerran jatkoilla) </p>
+                <p>Koulumenestys kuitenkin kiitettävä</p>
             </div>
             <div class="stat">
                 <h3>Kalle tilastot</h3>
@@ -67,11 +67,11 @@
                 <h3>Viihdetilastot</h3>
                 <p>70% mahdoillisuus olla "ulkona" ke-la välisenä aikana</p>
                 <p>jatkoille selvitytmisprosentti 70%</p>
-                <p>loput 30% ke-la päivistä mökillä</p>
+                <p>Joogiabin ykkösasiakas</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p></p>
+                <p>olematon (Hyökkäävä pelaaja)</p>
                 <p>0% puolustustehokkuus Torstai Kallesta</p>
             </div>
             <div class="stat">
