--- a/ranking.html
+++ b/ranking.html
@@ -29,7 +29,7 @@
         </div>
         <div class="content">
             <p>Dokatholin historiaan mahtuu suuria legendoja. Kysymys kuitenkin kuuluu: Kuka vie halutun Dokathlon-maljan tänä vuonna? </p>
-            <p>Tälle sivulle on kerätty Dokathlon 2024 Kilpailijoiden Power Ranking entisten kilpilujen ja perättömän spekulaation perusteella. Henkilön nimeä klikkaamalla voit tukia vastustajien tilastoja, heikkouksia ja vahvuuksia valmistautuessasi raastavaan kilpailuun.</p>
+            <p>Tälle sivulle on kerätty Dokathlon 2024 Kilpailijoiden Power Ranking entisten kilpailujen ja perättömän spekulaation perusteella. Henkilön nimeä klikkaamalla voit tukia vastustajien tilastoja, heikkouksia ja vahvuuksia valmistautuessasi raastavaan kilpailuun.</p>
         </div>
         <a href="P4Ppages/P4P1.html">
             <div class="P4Pcontent">
@@ -41,54 +41,55 @@
                 2. Veikko Talvitie
             </div>
         </a>
-        <a href="P4Ppages/P4P3.html">
-            <div class="P4Pcontent">
-                3. Sebastian Engström
-            </div>
-        </a>
         <a href="P4Ppages/P4P4.html">
             <div class="P4Pcontent">
-                4. Juho Säde
+                3. Juho Säde
             </div>
         </a>
         <a href="P4Ppages/P4P5.html">
             <div class="P4Pcontent">
-                5. Otto Hannula
-            </div>
-        </a>
-        <a href="P4Ppages/P4P6.html">
-            <div class="P4Pcontent">
-                6. Max Kuula
+                4. Otto Hannula
             </div>
         </a>
         <a href="P4Ppages/P4P7.html">
             <div class="P4Pcontent">
-                7. Risto Hartikainen
+                5. Risto Hartikainen
             </div>
         </a>
-        <a href="P4Ppages/P4P8.html">
+        <a href="P4Ppages/P4P6.html">
             <div class="P4Pcontent">
-                8. Joni Pihlman
-            </div>
-        </a>
-        <a href="P4Ppages/P4P9.html">
-            <div class="P4Pcontent">
-                9. Diana
+                6. Alvar Huotari
             </div>
         </a>
         <a href="P4Ppages/P4P10.html">
             <div class="P4Pcontent">
-                10. Asse Immonen
+                7. Marikki Viljasaari
+            </div>
+        </a>
+
+        <a href="P4Ppages/P4P9.html">
+            <div class="P4Pcontent">
+                8. Elias Leikkonen
+            </div>
+        </a>
+        <a href="P4Ppages/P4P3.html">
+            <div class="P4Pcontent">
+                9. Max Kuula
+            </div>
+        </a>
+        <a href="P4Ppages/P4P8.html">
+            <div class="P4Pcontent">
+                10. Joni Pihlman
             </div>
         </a>
         <a href="P4Ppages/P4P11.html">
             <div class="P4Pcontent">
-                11. Elias Leikkonen
+                11. Ilari Huotari
             </div>
         </a>
         <a href="P4Ppages/P4P12.html">
             <div class="P4Pcontent">
-                12. Ilari Huotari
+                12. Asse Immonen
             </div>
         </a>
         <a href="P4Ppages/P4P13.html">
@@ -98,36 +99,20 @@
         </a>
         <a href="P4Ppages/P4P14.html">
             <div class="P4Pcontent">
-                14. Marikki Viljasaari
+                14. Kasperi Kauppi
             </div>
         </a>
-        <a href="P4Ppages/P4Ppages/P4P15.html">
+        <a href="P4Ppages/P4P15.html">
             <div class="P4Pcontent">
                 15. Rasmus Rapala
             </div>
         </a>
         <a href="P4Ppages/P4P16.html">
             <div class="P4Pcontent">
-                16. Kasperi Kauppi
+                16. Jiri Aro
             </div>
         </a>
 
-        <a href="P4Ppages/P4P16.html">
-            <div class="P4Pcontent">
-                17. Jiri Aro
-            </div>
-        </a>
-
-        <a href="P4Ppages/P4P18.html">
-            <div class="P4Pcontent">
-                18. Eemeli Raninen
-            </div>
-        </a>
-        <a href="P4Ppages/P4P19.html">
-            <div class="P4Pcontent">
-                19. Heikki Lintula
-            </div>
-        </a>
     </div>
     <footer>
         <p>&copy; 2024 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
