--- a/P4Ppages/P4P13.html
+++ b/P4Ppages/P4P13.html
@@ -24,18 +24,18 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Heikki.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Jenni.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Heikki Lintula</h2>
-                <h2>Golf Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>Jenni Vihosalmi</h2>
+                <h2>Tequila Division</h2>
+                <p>19-2-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -52,16 +52,16 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
-                <p>200 100% tyhjennystä</p>
+                <h3>Vahvuudet</h3>
+                <p>Vape temput</p>
+                <p>Keuhkokuumekkaan ei tule biletystä estämään</p>
+                <p></p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Heikkoudet</h3>
+                <p>Ison matkalaturin kokoinen vape mahdollinen hidastaja</p>
+                <p>Skobakuskin taidot</p>
+                <p>Omat maidot ei sallittu kilpailun aikana</p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
@@ -71,19 +71,18 @@
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>Taloyhtön saunavuoron puolustustehokkuus 0%</p>
+                <p>ilarin puolustus mökillä myös hieman rakoilevaa</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <p>1,5h työmatka</p>
+                <p>Työsuhdelääkeet</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Ei aikaisempaa osallistumista</p>
+                <p></p>
             </div>
         </div>
     </section>
