--- a/P4Ppages/P4P14.html
+++ b/P4Ppages/P4P14.html
@@ -24,18 +24,18 @@
 
     <section class="fighter-profile">
         <div class="fighter-header">
-            <img src="../Kuvat/Heikki.png" alt="Fighter Image" class="fighter-image">
+            <img src="../Kuvat/Kappe.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
-                <h2>Heikki Lintula</h2>
+                <h2>Kasperi Kauppi</h2>
                 <h2>Golf Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <p>15-1-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -52,38 +52,37 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Oluita juotu</h3>
-                <p>340</p>
-                <p>123 Putkitusta</p>
+                <h3>Vahvuudet</h3>
+                <p>Mailapelien ässä</p>
+                <p>Fyysinen viivapelote</p>
                 <p>200 100% tyhjennystä</p>
             </div>
             <div class="stat">
-                <h3>Golf statsit</h3>
-                <p>HCP 13,7</p>
-                <p>5 rautaa katkasistu</p>
-                <p>1200€ euroa käytetty vuoden aikana Green fee:hin</p>
+                <h3>Heikkoudet</h3>
+                <p>Pankkihommat aina mielessä</p>
+                <p>Saattaa lähteä treffeille kesken kilpailun</p>
             </div>
             <div class="stat">
                 <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <p>5% lainasta lyhennetty</p>
+                <p>1 autopaikka</p>
+                <p>kallion yksiön kokoinen terassi</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
-                <p>70% puolustustehokkuus Torstai Kallesta</p>
+                <p>Dokahtlonin kiistaton nro 1 puolustaja</p>
+                <p>Puolustustehokuus Kallesta vaihteleva</p>
             </div>
             <div class="stat">
                 <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <p>9h per päivä nostamassa Shareholder valueta</p>
+                <p>Kiekko per päivä kulutus toimistolla</p>
+
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
-                <p>32% Dokathlonlajeista Top 3 sijoitus</p>
-                <p>100% lajeista humalassa</p>
+                <p>Mailalajeista ei varmuutta Dokahtlonissa</p>
+                <p>Ei aikaisempaa näyttöä</p>
             </div>
         </div>
     </section>
