--- a/P4Ppages/P4P4.html
+++ b/P4Ppages/P4P4.html
@@ -27,15 +27,15 @@
             <img src="../Kuvat/Juho.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
                 <h2>Juho Säde</h2>
-                <h2>Division</h2>
-                <p>25-1-0 (W-L-D)</p>
+                <h2>AfterSki Division</h2>
+                <p>27-2-0 (W-L-D)</p>
                 <div class="record">
                     <div>
-                        <h3>1</h3>
+                        <h3>0</h3>
                         <p>Kulta</p>
                     </div>
                     <div>
-                        <h3>1</h3>
+                        <h3>2</h3>
                         <p>Hopea</p>
                     </div>
                     <div>
@@ -70,7 +70,7 @@
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
-                <p>1 Dokathlon tittelin puolustus</p>
+                <p>0 Dokathlon tittelin puolustus</p>
                 <p>9% puolustustehokkuus sunnareista</p>
                 <p>0% puolustustehokkuus makuvichyistä</p>
             </div>
@@ -83,6 +83,7 @@
                 <h3>Lajimenestys</h3>
                 <p>0% omista lajeista dokathlon listalla</p>
                 <p>Saattaa heittää esineitä arvaamattomiin suuntiin</p>
+                <p>Inventor of kaljapiilo</p>
             </div>
         </div>
     </section>
