--- a/P4Ppages/P4P6.html
+++ b/P4Ppages/P4P6.html
@@ -27,7 +27,7 @@
             <img src="../Kuvat/Alvar.png" alt="Fighter Image" class="fighter-image">
             <div class="fighter-info">
                 <h2>Alvar Huotari</h2>
-                <h2></h2>
+                <h2>Banker Division</h2>
                 <p>20-0-0 (W-L-D) (Undefeated)</p>
                 <div class="record">
                     <div>
@@ -53,14 +53,14 @@
         <div class="stats-grid">
             <div class="stat">
                 <h3>Vahvuudet</h3>
-                <p>100% tapahtumista ajallaan paikalla</p>
+                <p>Undisputed Beer Pong Champ</p>
                 <p>Paineensietokyky top 3% maailmassa</p>
                 <p>Vaihdon aikainen steroidikuuri</p>
             </div>
             <div class="stat">
                 <h3>Heikkoudet</h3>
                 <p>opinnäytetyö, jossa opiskelija hyödyntää kandidaattiopintojen aikana hankkimiansa tietoja ja taitoja rajatun ongelman ratkaisussa.</p>
-                <p></p>
+                <p>Kastikkeet (varsinkin valkoiset)</p>
                 <p></p>
             </div>
             <div class="stat">
@@ -77,6 +77,7 @@
             <div class="stat">
                 <h3>Työtilastot</h3>
                 <p>2 viikkoa asfalttitöitä</p>
+                <p>Kesäloman suurin nautiskelija</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
