--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <div class = "ontop">
         <img src="Kuvat/Header.png" alt="Header kuva" class="header-image"> 
-        <div class="center1">Tervetuloa Dokathloniin vuosimallia 2024!</div>
+        <div class="center1">Dokathlon 2024!</div>
     </div>
     <div class="container">
 
