--- a/ranking.html
+++ b/ranking.html
@@ -19,11 +19,11 @@
         <a href="ranking.html">P4P ranking</a>
         <a href="results.html">Tulokset</a>
     </nav>
-    <div class = "ontop">
+    <div class="ontop">
         <img src="Kuvat/p4p.png" alt="Header kuva" class="header-image"> 
-        <div class="center2">P4P ranking</div>
+        <div class="center2">P4P</div>
     </div>
-    <div class="Container">
+    <div class="container">
         <div class="headerhis">
             <h2></h2>
         </div>
