--- a/results.html
+++ b/results.html
@@ -54,8 +54,8 @@
                     </table>
                 </div>
             </div>
-            
-
+        </div>
+    </div>
     <footer>
         <p>&copy; 2024 Dokathlon. Kaikki (oikeudet) pidätetään.</p>
     </footer>
@@ -177,9 +177,9 @@
             const participants = Object.keys(points);
 
             pointsTableHead.innerHTML = `
-                <th>Osallistuja</th>
+                <th>Nimi</th>
                 ${headers.slice(1).map(header => `<th>${header}</th>`).join('')}
-                <th>Pisteet yht.</th>
+                <th>yht.</th>
             `;
 
             participants.sort((a, b) => points[b].totalPoints - points[a].totalPoints);
