--- a/P4Ppages/P4P13.html
+++ b/P4Ppages/P4P13.html
@@ -64,10 +64,9 @@
                 <p>Omat maidot ei sallittu kilpailun aikana</p>
             </div>
             <div class="stat">
-                <h3>Kämppä statsit</h3>
-                <p>12% lakanioden vaihto tehokkuus</p>
-                <p>1,2 miljoona hiekanjyvää huoneen lattialla</p>
-                <p>78% omistus asunnon jauhelihoista</p>
+                <h3>Juomatilastot</h3>
+                <p>3.57 energiajuomaa per pivä</p>
+                <p>Selkäranka katkeaa, kun edes mainitaan Aperol spritz</p>
             </div>
             <div class="stat">
                 <h3>Puolustus</h3>
