--- a/P4Ppages/P4P8.html
+++ b/P4Ppages/P4P8.html
@@ -52,8 +52,10 @@
         <h2>Henkilökohtaiset tilastot</h2>
         <div class="stats-grid">
             <div class="stat">
-                <h3>Viinaa juotu</h3>
-                <p>3 pulloa viikonloppua varten</p>
+                <h3>Valmistautuminen</h3>
+                <p>3 pulloa tiukkaa viikonloppua varten</p>
+                <p>-12kg kesän alusta</p>
+                <p>Todellinen haastaja olympiatriathlonissa</p>
             </div>
             <div class="stat">
                 <h3>Rapujuhla statsit</h3>
