--- a/P4Ppages/P4P10.html
+++ b/P4Ppages/P4P10.html
@@ -74,10 +74,10 @@
                 <p>Liigan huonoin puolustustehokkuus Hyvinkään Rillosta</p>
             </div>
             <div class="stat">
-                <h3>Työtilastot</h3>
-                <p>13 Ubuntu konetta hallussa</p>
-                <p>40 043 riviä koodia kirjoitettu</p>
-                <p>400h CS2 pelattu</p>
+                <h3>Viihdetilastot</h3>
+                <p>13,5 "miau" sanottu per ilta</p>
+                <p>Vähintään kaksi spritziä per ilta</p>
+                <p>Odotusarvo 3,2 "downataaks nää niin kaatokännissä"</p>
             </div>
             <div class="stat">
                 <h3>Lajimenestys</h3>
