--- a/results.html
+++ b/results.html
@@ -22,7 +22,7 @@
     <div class="container">
         <div class="content">
             <h2>Tulokset</h2>
-            <p>Täältä löydät tulokset eri kilpailutapahtumista. Kilpailijat saavat pisteitä suoritustensa perusteella, ja ne on laskettu taulukkoon alla. Kilpailusuoritus pisteytetään antamalla voittajalle 17 pistettä ja lajin viimeiselle yksi piste. Tasatilanteessa molemmat osallistujat saavat korkeamman pistemäärän.</p>
+            <p>Täältä löydät tulokset eri kilpailutapahtumista. Kilpailijat saavat pisteitä suoritustensa perusteella, ja ne on laskettu taulukkoon alla. Kilpailusuoritus pisteytetään antamalla voittajalle 19 pistettä ja lajin viimeiselle yksi piste. Tasatilanteessa molemmat osallistujat saavat korkeamman pistemäärän.</p>
             <div class="results-table">
                 <h3>Tapahtumatulokset</h3>
                 <div style="overflow-x: auto;">
@@ -114,7 +114,8 @@
 
                 eventScores.sort((a, b) => eventTypes[eventIndex] ? a.score - b.score : b.score - a.score);
 
-                let currentPoints = 19;
+                const nonZeroParticipants = eventScores.filter(e => e.score > 0).length;
+                let currentPoints = nonZeroParticipants;
                 let lastScore = null;
                 let tieCount = 0;
 
@@ -156,7 +157,6 @@
             const headers = data[0].values[0]; 
             const results = data.slice(1).flatMap(range => range.values.slice(1));
 
-            // Populate Event Results Table
             headers.forEach(header => {
                 const th = document.createElement('th');
                 th.textContent = header;
