--- a/results.html
+++ b/results.html
@@ -28,29 +28,21 @@
                 <div style="overflow-x: auto;">
                     <table id="eventResultsTable">
                         <thead>
-                            <tr>
-                                <!-- Column headers will be dynamically added here -->
-                            </tr>
+                            <tr></tr>
                         </thead>
-                        <tbody>
-                            <!-- Data rows will be dynamically added here -->
-                        </tbody>
+                        <tbody></tbody>
                     </table>
                 </div>
             </div>
-            
+
             <div class="points-table">
                 <h3>Pisteet</h3>
                 <div style="overflow-x: auto;">
                     <table id="pointsTable">
                         <thead>
-                            <tr>
-                                <!-- Column headers will be dynamically added here -->
-                            </tr>
+                            <tr></tr>
                         </thead>
-                        <tbody>
-                            <!-- Data rows will be dynamically added here -->
-                        </tbody>
+                        <tbody></tbody>
                     </table>
                 </div>
             </div>
@@ -70,17 +62,9 @@
                 const rangeParams = rangesA1.map(range => `ranges=${encodeURIComponent(range)}`).join('&');
                 const url = `https://sheets.googleapis.com/v4/spreadsheets/${SHEET_ID}/values:batchGet?${rangeParams}&key=${API_KEY}`;
                 const response = await fetch(url);
-                
-                if (!response.ok) {
-                    throw new Error(`Error: ${response.status} ${response.statusText}`);
-                }
-
+                if (!response.ok) throw new Error(`HTTP ${response.status}`);
                 const data = await response.json();
-                if (data && data.valueRanges) {
-                    return data.valueRanges;
-                } else {
-                    throw new Error('No data found or data structure is incorrect.');
-                }
+                return data.valueRanges;
             } catch (error) {
                 console.error('Error fetching data:', error);
                 return null;
@@ -89,8 +73,8 @@
 
         function calculatePoints(results) {
             const points = {};
-            const eventCount = results[0].length - 1; 
-            const eventTypes = [0, 1, 1, 0, 0, 1, 1, 1, 1, 0];
+            const eventCount = results[0].length - 1;
+            const eventTypes = [0, 1, 1, 0, 0, 1, 1, 1, 1, 0]; // 0 = higher is better, 1 = lower is better
 
             results.forEach(row => {
                 const participant = row[0];
@@ -99,14 +83,11 @@
                     return isNaN(num) ? null : num;
                 });
 
-                if (!points[participant]) {
-                    points[participant] = {
-                        totalPoints: 0,
-                        eventPoints: Array(eventCount).fill(0)
-                    };
-                }
-
-                points[participant].scores = scores;
+                points[participant] = {
+                    totalPoints: 0,
+                    eventPoints: Array(eventCount).fill(0),
+                    scores: scores
+                };
             });
 
             for (let eventIndex = 0; eventIndex < eventCount; eventIndex++) {
@@ -115,8 +96,9 @@
                         participant,
                         score: data.scores[eventIndex]
                     }))
-                    .filter(entry => entry.score !== null); 
-                if (eventScores.length === 0) continue; 
+                    .filter(entry => entry.score !== null);
+
+                if (eventScores.length === 0) continue;
 
                 eventScores.sort((a, b) =>
                     eventTypes[eventIndex] ? a.score - b.score : b.score - a.score
@@ -140,65 +122,45 @@
                     tieCount++;
                 }
             }
-            }
+
+            return points;
+        }
 
         function populateTables(data) {
-            if (!data || data.length === 0) {
-                console.error('No data available to populate the tables.');
+            if (!data || data.length < 2) {
+                console.error('Invalid data.');
                 return;
             }
 
-            const eventResultsTableHead = document.querySelector('#eventResultsTable thead tr');
-            const eventResultsTableBody = document.querySelector('#eventResultsTable tbody');
+            const headers = data[0].values[0];
+            const results = data[1].values;
+
+            // Results table
+            const eventResultsHead = document.querySelector('#eventResultsTable thead tr');
+            const eventResultsBody = document.querySelector('#eventResultsTable tbody');
+            eventResultsHead.innerHTML = headers.map(h => `<th>${h}</th>`).join('');
+            eventResultsBody.innerHTML = results.map(row => `
+                <tr>${row.map(cell => `<td>${cell}</td>`).join('')}</tr>
+            `).join('');
+
+            // Points table
+            const points = calculatePoints(results);
             const pointsTableHead = document.querySelector('#pointsTable thead tr');
             const pointsTableBody = document.querySelector('#pointsTable tbody');
+            pointsTableHead.innerHTML = `<th>Nimi</th>${headers.slice(1).map(h => `<th>${h}</th>`).join('')}<th>Yht.</th>`;
 
-            const headers = data[0].values[0]; 
-            const results = data.slice(1).flatMap(range => range.values.slice(1));
-
-            headers.forEach(header => {
-                const th = document.createElement('th');
-                th.textContent = header;
-                eventResultsTableHead.appendChild(th);
-            });
-
-            results.forEach(row => {
-                const rowElement = document.createElement('tr');
-                row.forEach(cell => {
-                    const cellElement = document.createElement('td');
-                    cellElement.textContent = cell;
-                    rowElement.appendChild(cellElement);
-                });
-                eventResultsTableBody.appendChild(rowElement);
-            });
-
-            const points = calculatePoints(results);
-            const participants = Object.keys(points);
-
-            pointsTableHead.innerHTML = `
-                <th>Nimi</th>
-                ${headers.slice(1).map(header => `<th>${header}</th>`).join('')}
-                <th>yht.</th>
-            `;
-
-            participants.sort((a, b) => points[b].totalPoints - points[a].totalPoints);
-
-            participants.forEach(participant => {
-                const { eventPoints, totalPoints } = points[participant];
-                const tr = document.createElement('tr');
-                tr.innerHTML = `
-                    <td>${participant}</td>
-                    ${eventPoints.map(point => `<td>${point}</td>`).join('')}
-                    <td>${totalPoints}</td>
-                `;
-                pointsTableBody.appendChild(tr);
-            });
+            const sorted = Object.entries(points).sort((a, b) => b[1].totalPoints - a[1].totalPoints);
+            pointsTableBody.innerHTML = sorted.map(([name, data]) => `
+                <tr>
+                    <td>${name}</td>
+                    ${data.eventPoints.map(p => `<td>${p}</td>`).join('')}
+                    <td>${data.totalPoints}</td>
+                </tr>
+            `).join('');
         }
 
-        fetchData().then(data => {
-            populateTables(data);
-        }).catch(error => {
-            console.error('Error processing data:', error);
+        fetchData().then(populateTables).catch(error => {
+            console.error('Final error:', error);
         });
     </script>
 </body>
